--- a/package.json
+++ b/package.json
@@ -46,15 +46,16 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "isomorphic-fetch": "^2.1.1",
     "babel-core": "^6.5.2",
     "babel-polyfill": "^6.5.0",
     "babel-runtime": "^6.5.0",
     "express": "^4.12.3",
+    "isomorphic-fetch": "^2.1.1",
+    "moment": "^2.13.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-router": "^2.0.0",
     "react-redux": "^4.2.1",
+    "react-router": "^2.0.0",
     "redux": "^3.2.1",
     "redux-logger": "^2.4.0",
     "redux-thunk": "^1.0.3"
